--- a/themes/start-bootstrap/layouts/partials/products/list/product-list-item.html
+++ b/themes/start-bootstrap/layouts/partials/products/list/product-list-item.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-lg-4">
-  <a class="portfolio-item d-block mx-auto" href="{{ .RelPermalink }}">
+  <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-{{ .Params.id }}">
     <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
       <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
         <i class="fa fa-search-plus fa-3x"></i>
@@ -8,4 +8,24 @@
     <img class="b-lazy img-fluid" src="{{ .Params.thumbnailImage }}"/>
     <p>{{ .Params.title }} - {{ .Params.price }}</p>
   </a>
+</div>
+<div class="portfolio-modal mfp-hide" id="portfolio-modal-{{ .Params.id }}">
+  <div class="portfolio-modal-dialog bg-white">
+    <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+      <i class="fa fa-3x fa-times"></i>
+    </a>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2 class="text-secondary text-uppercase mb-0">{{ .Params.title }}</h2>
+          <hr class="star-dark mb-5">
+          <img class="img-fluid mb-5" src="{{ .Params.thumbnailImage }}" alt="{{ .Params.title }}">
+          <p class="mb-5">{{ .Content }}</p>
+          <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+            <i class="fa fa-close"></i>
+            Close Product</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
