--- a/themes/start-bootstrap-commerce/layouts/partials/products/list/product-list-item.html
+++ b/themes/start-bootstrap-commerce/layouts/partials/products/list/product-list-item.html
@@ -5,7 +5,7 @@
         <i class="fa fa-search-plus fa-3x"></i>
       </div>
     </div>
-    <img class="b-lazy img-fluid" src="{{ .Params.thumbnailImage }}"/>
+    <img class="b-lazy img-fluid" style="max-width:250px; max-height:400px;" src="{{ .Params.thumbnailImage }}"/>
     <p>{{ .Params.title }} - {{ .Params.price }}</p>
   </a>
 </div>
