--- a/themes/start-bootstrap-commerce/layouts/partials/products/common/site-main-footer.html
+++ b/themes/start-bootstrap-commerce/layouts/partials/products/common/site-main-footer.html
@@ -23,10 +23,14 @@
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+    <h2 class="text-center text-uppercase text-secondary mb-0">Contact us</h2>
     <hr class="star-dark mb-5">
     <div class="row">
       <div class="col-lg-8 mx-auto">
+
+        <!-- #TODO - map Google Forms fields to the form below -->
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGA9cHnyjLMn58XKsoTA5KdOl2dPX45Bpr1YFGdl3heiN00g/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
         <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
         <form name="sentMessage" id="contactForm" novalidate="novalidate">
